--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Javier Melo",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "sequelize": "^6.33.0",
